# karbowanec

./: README.md
docs/: CT-DESIGN.md  CT_CHECKPOINT_TRUST.md
include/: BlockchainExplorerData.h  CryptoNote.h  CryptoTypes.h  Denominations.h  ITransaction.h  ITransfersContainer.h  IWallet.h  IWalletLegacy.h
src/: CMakeLists.txt  CryptoNoteConfig.h
src/BlockchainExplorer/: BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h
src/Checkpoints/: Checkpoints.cpp  Checkpoints.h
src/CryptoNoteCore/: Blockchain.cpp  Blockchain.h  Core.cpp  Core.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  ICore.h  ITransactionValidator.h  LMDBBlockchainDB.cpp  LMDBBlockchainDB.h  Transaction.cpp  TransactionPool.cpp  TransactionPool.h  TransactionPrefixImpl.cpp  TransactionUtils.cpp  TransactionValidation.cpp  TransactionValidation.h
src/GreenWallet/: CommandDispatcher.cpp  CommandImplementations.cpp  Commands.cpp  ParseArguments.cpp  Transfer.cpp  Transfer.h  Types.h  WalletConfig.h  ZedWallet.cpp
src/InProcessNode/: InProcessNode.cpp
src/P2p/: NetNode.cpp  NetNodeConfig.cpp  NetNodeConfig.h
src/PaymentGate/: PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h
src/PaymentGateService/: PaymentGateService.cpp  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h
src/Rpc/: BuiltinExplorer.cpp  BuiltinExplorer.h  CoreRpcServerCommandsDefinitions.h  RpcServer.cpp
src/Serialization/: BinaryInputStreamSerializer.cpp  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h
src/SimpleWallet/: SimpleWallet.cpp  SimpleWallet.h
src/Transfers/: TransfersConsumer.cpp  TransfersContainer.cpp  TransfersContainer.h
src/Wallet/: TransactionBuilder.cpp  TransactionBuilder.h  WalletGreen.cpp  WalletGreen.h  WalletRpcServer.cpp  WalletRpcServer.h  WalletRpcServerCommandsDefinitions.h  WalletSerializationV1.cpp
src/WalletLegacy/: WalletLegacy.cpp  WalletLegacy.h  WalletLegacyEvent.h  WalletRequest.h  WalletSendTransactionContext.h  WalletTransactionSender.cpp  WalletTransactionSender.h  WalletUserTransactionsCache.cpp
src/crypto/: crypto-util.c  crypto-util.h  ct_ecdh.cpp  ct_ecdh.h  gk_denomination_table.h  gk_proof.cpp  gk_proof.h  mlsag.cpp  mlsag.h  msm.cpp  msm.h  pedersen.cpp  pedersen.h  random.h  transaction_balance.cpp  transaction_balance.h  triptych.cpp  triptych.h
src/crypto_pq/: PqAead.cpp  PqAead.h  PqDsa.cpp  PqDsa.h  PqHash.cpp  PqHash.h  PqKem.cpp  PqKem.h
tests/: CMakeLists.txt  bench_ct_validation.cpp  fuzz_ct_serializer.cpp  test_ct_integration.cpp  test_gk_proof.cpp  test_kv_v2_roundtrip.cpp  test_lmdb_reorg.cpp  test_mixed_v2_roundtrip.cpp  test_mlsag.cpp  test_pq_primitives.cpp  test_swap_derivation.cpp  test_transaction_balance.cpp  test_triptych.cpp  test_v3_chain_integration.cpp
tests/CoreTests/: BlockReward.cpp  BlockValidation.cpp  BlockValidation.h  BoostSerializationHelper.h  Chaingen.h  CryptoNoteBoostSerialization.h  IntegerOverflow.cpp  RandomOuts.cpp  RingSignature.cpp  TransactionBuilder.cpp  TransactionTests.cpp  TransactionValidation.cpp  UnorderedContainersBoostSerialization.h  Upgrade.cpp  double_spend.inl
tests/IntegrationTestLib/: BaseFunctionalTests.cpp  BaseFunctionalTests.h  InProcTestNode.cpp  InProcTestNode.h  RPCTestNode.cpp  RPCTestNode.h  TestNode.h  TestWalletLegacy.cpp  TestWalletLegacy.h
tests/IntegrationTests/: IntegrationTests.cpp  MultiVersion.cpp  Node.cpp  main.cpp
tests/NodeRpcProxyTests/: NodeRpcProxyTests.cpp
tests/PerformanceTests/: CheckRingSignature.h
tests/TestGenerator/: TestGenerator.cpp  TestGenerator.h
tests/TransfersTests/: TestNodeRpcProxy.cpp  TestTxPoolSync.cpp  Tests.cpp
tests/UnitTests/: ICoreStub.cpp  ICoreStub.h  INodeStubs.cpp  INodeStubs.h  Serialization.cpp  TestBlockchainGenerator.cpp  TestBlockchainGenerator.h  TestDenominations.cpp  TestGKProof.cpp  TestTransfers.cpp  TestWallet.cpp  TestWalletLegacy.cpp  TransactionPool.cpp
tests/crypto/: crypto.cpp  main.cpp  random.c
